--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,7 @@ services:
   - docker:dind
 
 stages:
-  - build
-  - push
+  - docker
 
 variables:
   DOCKER_HOST: tcp://docker:2375
@@ -17,15 +16,9 @@ before_script:
   - docker --version
 
 docker-build:
-  stage: build
+  stage: docker
   script:
     - docker build -t $CONTAINER_RELEASE_IMAGE .
-  only:
-    - master
-
-docker-push:
-  stage: push
-  script:
     - docker push -t $CONTAINER_RELEASE_IMAGE
   only:
     - master
